fixed appearance of footer on mobile

--- a/gulp/src/scss/layout/_footer.scss
+++ b/gulp/src/scss/layout/_footer.scss
@@ -2,13 +2,10 @@
 	padding:10px 0;
 	background: $main_black;
 	color:white;
-	margin-top:40px;
 	.columns{
-		@include breakpoint(large){
-			display:flex;
-			align-items:center;
-			justify-content:space-between;
-		}
+		display:flex;
+		align-items:center;
+		justify-content:space-between;
 	}
 }
 
